<resources>
    <string name="app_name">Landmark Remark</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_note">Add Note</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_name">Your Name</string>
    <string name="your_email">Your Email</string>
    <string name="your_password">Your Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up_underline"><u>Sign Up</u></string>
    <string name="sign_in_underline"><u>Sign In</u></string>
    <string name="sign_out">Sign out</string>
    <string name="list_note">List of my saved notes</string>
    <string name="my_notes">My Notes</string>
    <string name="searching_notes">Searching Notes</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="location">Lat: 0.00000 - Lng: 0.00000</string>
</resources>