<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="4dp"
    app:cardCornerRadius="16dp"
    app:cardMaxElevation="8dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:gravity="center">

        <TextView
            android:id="@+id/note_name_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textAlignment="textStart"/>

        <TextView
            android:id="@+id/note_mail_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textAlignment="textStart"/>

        <TextView
            android:id="@+id/note_title_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textAlignment="textStart"/>

        <TextView
            android:id="@+id/note_des_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textAlignment="textStart"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>